# laya

./: .clang-format  .clang-tidy  .clang-tidy-ci  .editorconfig  .gitignore  .gitmodules  .lsan_suppressions  .pre-commit-config.yaml  .yamllint  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  SHARED_LIBRARIES.md  STYLE.md  TODO.md  mkdocs.yml
.github/scripts/: generate-metrics.sh
.github/workflows/: README.md  benchmark.yml  build.yml  build_linux.yml  build_windows.yml  ci.yml  create_release.yml  docs.yml  pr.yml  release.yml  static-analysis.yml  static.yml  static_analysis.yml  test.yml
cmake/: LayaConfig.cmake.in  LayaInstall.cmake  SetupSDL3.cmake
docs/: AGENTS.md  README.md  architecture.md  building.md  features.md  getting-started.md  getting_started.md  goals.md  index.md  project_plan.md  quick_start.md  roadmap.md  shared_libraries.md  window_events_implementation.md
docs/ci-metrics/: index.md
docs/design/: basic_usage.md  comparisons.md  wrapping_techniques.md
docs/design/implementation/: cmake_build_system.md  event_view.md  logging.md  testing_framework.md
docs/features/: events.md  logging.md  overview.md  rendering.md  surfaces.md  textures.md  windows.md
docs/implementation_plans/: ci_cd_setup.md  cmake_build_system.md  init_subsystem.md
docs/stylesheets/: extra.css
examples/: AGENTS.md  CMakeLists.txt  README.md  hello_laya.cpp
examples/common/: CMakeLists.txt  example_base.hpp
examples/events/: CMakeLists.txt  event_range_multipass.cpp  event_view_basic.cpp  main.cpp  quit_and_escape.cpp  window_event_data.cpp
examples/input/: CMakeLists.txt  keyboard_mouse_state.cpp
examples/logging/: CMakeLists.txt  logging_basics_levels.cpp  logging_categories_priority.cpp  logging_color_output.cpp  logging_render_loop.cpp  main.cpp
examples/rendering/: CMakeLists.txt  main.cpp  render_clear_screen.cpp  render_draw_primitives.cpp  render_quit_with_events.cpp
include/laya/: bitmask.hpp  errors.hpp  event_polling.hpp  event_queue.hpp  event_types.hpp  events.hpp  init.hpp  laya.hpp  subsystems.hpp  window.hpp  window_flags.hpp
include/laya/events/: event_polling.hpp  event_types.hpp  event_window.hpp
include/laya/input/: keyboard.hpp  mouse.hpp
include/laya/logging/: log.hpp  log_category.hpp  log_priority.hpp
include/laya/renderers/: renderer.hpp  renderer_flags.hpp  renderer_id.hpp  renderer_types.hpp
include/laya/surfaces/: pixel_format.hpp  surface.hpp  surface_flags.hpp
include/laya/textures/: texture.hpp  texture_access.hpp
include/laya/utils/: bitmask.hpp
include/laya/window/: window_flags.hpp  window_id.hpp
include/laya/windows/: window.hpp  window_flags.hpp  window_id.hpp
scripts/: AGENTS.md  PrintColor.ps1  README.md  STYLE.md  run-actions.sh  run-benchmarks.sh  run-examples-headless.sh  run-pre-commit.sh  run-target.sh  serve-docs.sh  test-unix-deployment.sh  unix-health-check.sh  verify-actions.sh
scripts/ci/: AGENTS.md  README.md  cleanup-xvfb.sh  find-sdl3-lib.sh  generate-coverage.sh  install-compiler.sh  install-ubuntu-deps.sh  run-benchmarks-linux.sh  run-tests.sh  setup-xvfb.sh
scripts/git/: Run-PreCommit.ps1
scripts/health/: Check-Tools.ps1  actions.sh  check-actions.sh  check-build.sh
scripts/tools/: Run-Pre-Commit.ps1  Verify-Tools.ps1
scripts/utils/: Print-Color.ps1  print-color.sh
src/: AGENTS.md  CMakeLists.txt
src/laya/: errors.cpp  event_polling.cpp  event_queue.cpp  event_types.cpp  events.cpp  init.cpp  keyboard.cpp  log.cpp  mouse.cpp  renderer.cpp  subsystems.cpp  surface.cpp  texture.cpp  window.cpp
tests/: AGENTS.md  CMakeLists.txt  test_main.cpp
tests/benchmark/: README.md  bench_utils.hpp  test_events_benchmark.cpp  test_rendering_benchmark.cpp  test_subsystem_benchmark.cpp
tests/integration/: test_sdl_integration.cpp
tests/performance/: perf_utils.hpp  test_init_performance.cpp  test_subsystem_performance.cpp
tests/unit/: test_event_range.cpp  test_event_view.cpp  test_init.cpp  test_logging.cpp  test_renderer.cpp  test_subsystems.cpp  test_surface.cpp  test_window.cpp  test_window_event.cpp  test_window_event_conversion.cpp
tests/utils/: test_helpers.hpp  test_main.cpp
tools/: AGENTS.md  README.md  pyproject.toml
